# Star

./: README.md  noxfile.py  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
src/star/: __init__.py
