[project]
name = "star"
version = "0.1.0"
description = "A lightweight, self-hosted Starboard bot for Discord."
license = "MIT"
readme = "README.md"
requires-python = "~=3.13.0"
authors = [{ name = "June", email = "junapur@proton.me" }]
maintainers = [{ name = "June", email = "junapur@proton.me" }]
dependencies = []

[project.urls]
Homepage = "https://github.com/junapur/Star"
Repository = "https://github.com/junapur/Star"
Issues = "https://github.com/junapur/Star/issues"

[project.scripts]
star = "star:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
lint = ["ruff==0.11.10"]
nox = ["nox==2025.5.1"]
type-check = ["pyright==1.1.400"]

[tool.uv]
required-version = "~=0.7.0"
default-groups = "all"

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle
    "F",     # pyflakes
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "ASYNC", # flake8-async
    "I",     # isort
]

# These codes conflict with Ruff’s formatter.
# See https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
ignore = ["E111", "E114", "E117", "E501"]
